--- a/src/app/goal/goal.component.html
+++ b/src/app/goal/goal.component.html
@@ -1,15 +1,17 @@
 <h1> My Goals </h1>
 <hr>
-
-<ul>
-  <div *ngFor='let goal of goals; let i = index'>
-      <li id ="{{i}}" appStrikethrough > {{goal.name}} due on {{goal.completeDate | date |uppercase}} </li>
-      <button (click)='toggleDetails(i)'>Toggle Details</button>
-
-      <app-goal-details *ngIf="goal.showDescription"[goal]='goal'(isComplete)='completeGoal($event,i)'></app-goal-details>
-
+<div class="container">
+  <div class="row"  *ngFor='let goal of goals; let i = index'>
+      <div class="row">
+        <h4 id ="{{i}}" appStrikethrough > {{goal.name}} due on {{goal.completeDate | date |uppercase}} </h4>
+      <button  class="btn btn-primary"  (click)='toggleDetails(i)'>Toggle Details</button>
+    </div>
+    <div class="row" *ngIf="goal.showDescription">
+      <app-goal-details [goal]='goal'(isComplete)='deleteGoal($event,i)'></app-goal-details>
+      <app-goal-form (addGoal)="addNewGoal($event)" > </app-goal-form>
+    </div>
   </div>
+</div>
   
-</ul>
   <p *ngIf='goals.length > 5'>You have too many goals</p>
   <p *ngIf='goals.length == 0'>You do Not have goals</p>
